# alecto_engine

./: .luarc.json  Cargo.toml  build.rs
.cargo/: config.toml
assets/: init.lua
assets/menus/: test_menu.lua
lua/: typedef.lua
src/: main.rs
src/assets/: archive_manager.rs  mod.rs
src/game/: events.rs  mod.rs
src/registries/: menu_registry.rs  mod.rs
src/renderer/: mod.rs
