[package]
name = "alecto_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
pollster = "0.4.0"
glium = "0.36.0"
winit = "0.30.11"
zip = "4.1.0"
mlua = { version = "0.10.5", features = ["luajit"] }
pretty_env_logger = "0.5.0"
log = "0.4.27"

[build-dependencies]
zip = "4.1.0"
